[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"

[dependencies]
anyhow = "1.0.59"                                   # error handling
base64 = "0.22.1"
bytes = "1.3.0"                                     # helps manage buffers
indexmap = "2.13.0"
rand = { version = "0.10.0" } # async networking
resp = "1.0.3"

thiserror = "1.0.32"                                # error handling
tokio = { version = "1.23.0", features = ["full"] } # async networking
uuid = { version = "1.21.0", features = ["v4"] }
